pkg_cppflags = -I$(srcdir)/include
pkg_sources = \
	src/BigBitVec.C \
	src/FixBitVec.C \
	src/Hilbert.C \
	src/hilbert_mpi_ops.C \
	include/Hilbert/GetLocation.hpp \
	include/Hilbert/SetBits.hpp \
	include/Hilbert/Common.hpp \
	include/Hilbert/BigBitVec.hpp \
	include/Hilbert/BitVecType.hpp \
	include/Hilbert/FixBitVec.hpp \
	include/Hilbert/Algorithm.hpp \
	include/Hilbert/GetBits.hpp \
	include/Hilbert/GrayCodeRank.hpp \
	include/Hilbert/SetLocation.hpp \
	include/Hilbert.hpp \
	include/hilbert.h 

# import as much commonality as possible
include $(top_srcdir)/contrib/Make.common
